--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
   <body>
-
+    <!-- Nav -->
     <div class="main-nav">
         <ul class="nav">
           <li class="name">Bryant Rivas</li>
@@ -15,21 +15,21 @@
          
         </ul>
     </div>
-
+    <!-- Introduction -->
     <header>
       <img src="bryant.jpg" alt="Drawing of Bryant Rivas" class="profile-image">
       <h1 class="tag name">Hello, I’m Bryant.</h1>
       <p class="tag location">My home is Greenport, New York
      .</p>
     </header>
-
+    <!-- Biography -->
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
         <p>I’m an aspiring web designer who learning and expanding on the world that is World Wide Web. I've lived in the same town for most my life and have worked in lots of different jobs. I'm excited to take my first steps in becoming a professional Front End Developer.</p>
         <p>I’ve been a Bartender, Waiter, and Pool technician and I hope to dive hed first into the world of Web Development.</p>
       </div> 
-
+    <!-- Goals -->
       <div class="card">
         <h2>Goals</h2>
         <p>I want to master the process of building web sites developing my, skills and abilities in:</p>
@@ -45,6 +45,7 @@
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
       </div> 
 
+    <!-- Footer Links -->
     </main>
     <footer>
       <ul>
